--- a/N3Test/app/src/main/AndroidManifest.xml
+++ b/N3Test/app/src/main/AndroidManifest.xml
@@ -20,16 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".TestActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_test"
-            android:theme="@style/FullscreenTheme"></activity>
 
         <activity
             android:name=".RadioPlayBaseActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/FullscreenTheme"></activity>
+
+        <activity android:name=".views.TestActivity" />
     </application>
 
 </manifest>
